tests/should_fail/syntax_compare_void.nv
module main

// SHOULD FAIL: compare void — relational op on void expression
fn noop() {}
let x = noop() > noop()
println(x)
